@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - use prove -b instead of prove -l for release tests
 
 0.95      2013-05-29 16:54:54 America/New_York
   - revamped minting process
